[package]
name = "bruto-lang"
version = "0.9.10"
edition = "2024"
authors = ["Enzo Lombardi <enzinol@gmail.com>"]
repository = "https://github.com/aovestdipaperino/bruto-lang"
description = "Language interfaces and runtime for Bruto IDE"
license = "MIT"

[dependencies]
inkwell = { version = "0.8.0", features = ["llvm18-1"] }
turbo-vision = { version = "1.2", git = "https://github.com/aovestdipaperino/turbo-vision-4-rust.git" }
